manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect
  namespace: united-calendar
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: redirect
  type: ClusterIP
